# vMachine

./: .env  .env.example  .gitignore  README.md  alembic.ini  gunicorn.conf.py  okastro.db  pyproject.toml  pyrightconfig.json
alembic/: env.py
backend/: .gitignore  pyproject.toml
backend/.sisyphus/plans/: ai-datacenter-control-plane.md
backend/alembic/versions/: 6f4e3554a006_initial_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/endpoints/identity/: tenants.py
backend/app/clients/kubernetes/: __init__.py
backend/app/clients/openstack/: connection.py
backend/app/clients/vmware/: connection.py
backend/app/common/exceptions/: handlers.py
backend/app/common/metrics/: custom.py
backend/app/common/middleware/: request_id.py
backend/app/common/utils/: cache.py  openstack_cache.py
backend/app/core/config/: settings.py
backend/app/db/session/: __init__.py  session.py
backend/app/events/: shutdown.py  startup.py
backend/app/models/: alert_record.py  audit_log.py  auto_scaling_policy.py  cluster_deployment.py  migration_task.py  monitoring_metric.py  operation_task.py  resource_snapshot.py  scheduled_task.py  storage_pool.py
backend/app/modules/auth/: __init__.py
backend/app/modules/cluster/: __init__.py
backend/app/modules/health/: __init__.py
backend/app/modules/kubernetes/: __init__.py
backend/app/modules/monitoring/: __init__.py
backend/app/modules/tenants/: __init__.py
backend/app/modules/volumes/: __init__.py  manager.py
backend/app/schemas/core/: operation_task.py
backend/app/schemas/openstack/: flavor.py  image.py  router.py
backend/app/services/core/: audit_service.py  operation_task_service.py
backend/app/services/identity/: tenant_service.py
backend/app/services/monitoring/: monitoring_service.py
backend/app/services/openstack/: flavor_service.py  router_service.py  storage_service.py
backend/app/services/orchestration/: cluster_service.py  migration_service.py  operations_service.py
backend/app/services/vmware/: inventory_service.py  mapping_engine.py
backend/benchmarks/: api_benchmark.py
backend/benchmarks/scenarios/: health_check.py  list_servers.py  long_running.py  mixed_api.py
backend/deploy/docker/: Dockerfile  docker-compose.yml
backend/docs/: performance_report.md  vmware_migration_architecture.md
backend/tests/: conftest.py
backend/tests/unit/: test_health.py  test_openstack_compute.py  test_operations.py
(+287 files in other folders)
