[project]
name = "okastro-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for an OpenStack-based virtualization platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "gunicorn>=23.0.0,<24.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "openstacksdk>=4.0.0,<5.0.0",
  "kubernetes>=30.0.0,<40.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "typing-extensions>=4.12.0,<5.0.0",
  "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["deploy*", "alembic*", "scripts*", "tests*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
