[project]
name = "okastro-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for an OpenStack-based virtualization platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "gunicorn>=23.0.0,<24.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "openstacksdk>=4.0.0,<5.0.0",
  "kubernetes>=30.0.0,<40.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "typing-extensions>=4.12.0,<5.0.0",
  "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
  "redis>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0"
]

otel = [
  "opentelemetry-api>=1.30.0,<2.0.0",
  "opentelemetry-sdk>=1.30.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.62b0,<1.0.0",
  "opentelemetry-instrumentation-requests>=0.62b0,<1.0.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.62b0,<1.0.0",
  "opentelemetry-instrumentation-redis>=0.62b0,<1.0.0",
  "opentelemetry-exporter-otlp>=1.30.0,<2.0.0",
]

all = [
  "okastro-backend[dev,otel]"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["deploy*", "alembic*", "scripts*", "tests*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
